--- a/Cau1.html
+++ b/Cau1.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Bài Kiểm Tra Đầu Giờ Session04</h1>
-    <script src="script.js"></script>
+    <script src="Cau1.js"></script>
   </body>
 </html>
